syntax = "proto3";

import "../potassium/potassium-data.proto";


/** AGSE-PKI signing request. */
message AGSEPKISigningRequest {
	/** @see PotassiumData.SignAlgorithms */
	required PotassiumData.SignAlgorithms algorithm = 1;

	/** Signed data. */
	required bytes data = 2;
}
