syntax = "proto3";


/** Subresource data associated with a release submission. */
message WebSignPackageSubresources {
	/** Map of subresource paths to contents. */
	map<string, bytes> subresources = 1;
}
